# lang-learn

basic/: CMakeLists.txt
basic/src/: CMakeLists.txt
basic/src/algorithm/include/: stl.h
basic/src/common/src/: CMakeLists.txt
basic/src/example/src/: example.cpp
basic/src/thread/include/: pointer.h
c++/book/: Readme.md
c++/book/flying/: CMakeLists.txt
c/std/foundation/: run.sh
cpp/backup/: 1.cpp
cpp/backup/f/: 2.cpp  TestFive.h  TestFour.h
cpp/basic/: CMakeLists.txt  main.cpp  rerunning.sh
cpp/basic/src/: CMakeLists.txt
cpp/disign_patterns/: clean.sh
cpp/features/: Readme.md
cpp/features/base/: CMakeLists.txt  CMakeLists_bak.txt  run.sh
cpp/features/base/src/: CMakeLists.txt  main.cpp  types.h
cpp/features/base/src/common/include/: source_location.h
cpp/features/base/src/common/src/: CMakeLists.txt  source_location.cpp
cpp/features/base/src/cpp20/include/: concept.h  interfaces.h
cpp/features/base/src/cpp20/src/: CMakeLists.txt  concept.cpp  interfaces.cpp
cpp/features/base/src/cpp23/include/: enum_class.h  interfaces.h
cpp/features/base/src/cpp23/src/: CMakeLists.txt  enum_class.cpp  interfaces.cpp
cpp/features/base/src/cppprevious/: CMakeLists.txt  interfaces.cpp  object.cpp
cpp/features/base/src/cppprevious/animal/include/: animal.h  cat.h  dog.h
cpp/features/base/src/cppprevious/animal/src/: CMakeLists.txt  animal.cpp  cat.cpp  dog.cpp
cpp/features/base/src/cppprevious/include/: interfaces.h  object.h  types.h
cpp/features/base/src/interview/include/: interfaces.h
cpp/features/base/src/interview/src/: CMakeLists.txt  interfaces.cpp
cpp/interview/: CMakeLists.txt  clean.sh  main.cpp  rerunning.sh
cpp/interview/source/: test.md
cpp/interview/src/: CMakeLists.txt
cpp/opensource/boost/boost_server/: CMakeLists.txt  TxJoinServer.cpp  TxJoinServer.h  TxMessage.h  TxTcpException.h  TxTcpServer.cpp  TxTcpServer.h  TxTcpSession.cpp  TxTcpSession.h
cpp/patterns/: CMakeLists.txt  auto_build.sh
cpp/protocol/protobuf/exp01/: CMakeLists.txt  main.cpp
cpp/protocol/protobuf/exp01/proto/: person.pb.cc  person.pb.h  person.proto  tree.pb.cc  tree.pb.h  tree.proto
disign_patterns/: main.cpp
disign_patterns/patterns/include/: adapter.h  builder.h  composite.h  decorator.h  examples.h  facade.h  prototype.h  proxy.h  stratagy.h
golang/basic/: go.mod  main.go
golang/exp01/: hello  main.go
golang/gotour/: go.mod  main.go
image/exp01/: CMakeLists.txt  main.cpp  rainbow-700x700.rgb24
mysql/Dump20180415/: marsdatabase_routines.sql  marsdatabase_tb_contacts.sql  marsdatabase_tb_conversation.sql  marsdatabase_tb_group.sql  marsdatabase_tb_grouprelate.sql  marsdatabase_tb_msg.sql  marsdatabase_tb_test.sql  marsdatabase_tb_usrinfo.sql
qt/music/: CMakeLists.txt  login.cpp  login.h  login.ui  main.cpp  player.cpp  player.h  uimanage.cpp  uimanage.h  video.cpp  video.h  widget.cpp  widget.h  widget.ui
qt/music/icon/: assets.qrc
react/example/react-demo-vite/: package-lock.json  package.json
react/example/react-ts-demo/: .eslintrc.js  .prettierrc.js  package-lock.json  package.json
rust/example/: Cargo.toml  ReadMe.md
rust/example/chat/: Cargo.toml
rust/example/chat/src/: main.rs
rust/example/connect_tcp/: Cargo.toml
rust/example/connect_tcp/src/: main.rs
rust/example/hello_macro/: Cargo.toml
rust/example/hello_macro/src/: lib.rs
rust/example/hello_macro_application/: Cargo.toml
rust/example/hello_macro_application/src/: main.rs
rust/example/hello_macro_derive/: Cargo.toml
rust/example/hello_macro_derive/src/: constant_string.rs  custom_model.rs  hash_mapify.rs  hello.rs  into_hashmap.rs  lib.rs  log_duration.rs
rust/example/jsonrpc/: Cargo.toml
rust/example/jsonrpc/src/: exit.rs  jsonipc.rs  lib.rs  main.rs
rust/example/reqwestexp/: Cargo.toml
rust/example/reqwestexp/src/: main.rs
rust/example/tinydb/: Cargo.toml
rust/example/tinydb/src/: main.rs
rust/example/tinyhttp/: Cargo.toml
rust/example/tinyhttp/src/: main.rs
rust/example/tranning/: Cargo.toml
rust/example/tranning/src/: helloworld.rs  lib.rs  main.rs
rust/example/yaml_file_parse/: Cargo.toml
rust/example/yaml_file_parse/src/: docker-compose-bak.yaml  docker-compose-deal.yaml  main.rs
rust/hand/: Cargo.toml  ReadMe.md
rust/hand/dictionary/: Cargo.toml  Record.md.bk
rust/hand/dictionary/src/: dict.rs  main.rs
rust/hand/dictionary/test/: m1.md  m2.txt
rust/hand/dictionary/test/first/: ni.md
rust/hand/package_analyze/: Cargo.toml  solana.pack  statistics_pack
rust/hand/package_analyze/src/: main.rs
rust/hand/shape/: Cargo.toml
rust/hand/shape-app/: Cargo.toml
rust/hand/shape-app/src/: main.rs
rust/hand/shape/src/: lib.rs  maths.rs
rust/hand/shape/src/plane/: base.rs  circle.rs  line.rs  mod.rs  point.rs  rectangle.rs  square.rs  straightline.rs  triangle.rs
rust/libraries/: Cargo.toml
rust/libraries/src/: cli.rs  lib.rs  main.rs  packages.rs
rust/libraries/src/anyhow/: anyhow.rs
rust/libraries/src/base64/: base64.rs
rust/libraries/src/bitflags/: bitflags.rs  custom_bits_type.rs  fmt.rs  macro_free.rs  mod.rs
rust/libraries/src/byteorder/: byteorder.rs  mod.rs
rust/libraries/src/bytes/: bytes.rs
rust/libraries/src/chrono/: chrono.rs
rust/libraries/src/envlogger/: logger.rs
rust/libraries/src/futures/: futures.rs
rust/libraries/src/futureutil/: future.rs
rust/libraries/src/hex/: hex.rs
rust/libraries/src/indexmap/: indexmap.rs  mod.rs
rust/libraries/src/itertools/: itertools.rs  mod.rs
rust/libraries/src/jsonrpccore/: jsonrpccore.rs  middleware.rs  mod.rs
rust/libraries/src/numcpus/: mod.rs  numcpus.rs
rust/libraries/src/rand/: rand.rs
rust/libraries/src/randchacha/: mod.rs  randchacha.rs
rust/libraries/src/reqwest/: reqwest.rs
rust/libraries/src/secp256k1/: mod.rs  secp256k1.rs
rust/libraries/src/serde/: serde.rs
rust/libraries/src/sha2/: mod.rs  sha2.rs
rust/libraries/src/signalshook/: mod.rs  signalshook.rs
rust/libraries/src/tokio/: connect_tcp.rs  echo_tcp.rs  mod.rs  tokio.rs
rust/libraries/src/uriparse/: mod.rs  uriparse.rs
rust/std/: Cargo.toml
(+267 files in other folders)
