 [workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Bright"]

[workspace]
members = [ "package_analyze","shape", "shape-app", "dictionary"]



[workspace.dependencies]
log = "0.4.27"
env_logger = "0.11.8"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"