 [workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Bright"]

[workspace]
members = [ "package_analyze","shape", "shape-app", "dictionary"]



[workspace.dependencies]
env_logger = "0.11.8"
futures = { version = "0.3.31", features = ["thread-pool"] }
futures-util = "0.3"
log = "0.4.27"
rand = "0.9.1"
rpassword = "7.3"
reqwest = { version = "0.12.14", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }

