[package]
name = "flying"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bitflags = { version ="2.9.0", features = ["serde"]}
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = "0.4.40"
env = "1.0.1"
env_logger = "0.11.7"
futures = { version = "0.3.31", features = ["thread-pool"] }
futures-util = "0.3.31"
hex = "0.4.3"
indexmap = "2.9.0"
itertools = "0.14.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-tcp-server = "18.0.0"
libc = "0.2.172"
log = "0.4.0"
num_cpus = "1.16.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
rayon = "1.10.0"
secp256k1 = {version = "0.31.0", features = ["rand"]}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
sha3 = "0.10.8"
signal-hook = "0.3.17"
tokio = { version = "1.44.2", features = ["full"] }
uriparse = "0.6.4"


