[package]
name = "chat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = {version = "0.7.15", features = ["full"]}
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
tracing = "0.1"