[package]
name = "connect_tcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1.0.0",  features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}