[package]
name = "hello_macro_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
darling = "0.20.11"
proc-macro2 = "1.0.95"
cacache = { version = "12.0.0", default-features = true, features = ["mmap"] }
