[package]
name = "tinyhttp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = "1.10.1"
serde_derive = "1.0.219"
serde = "1.0"
serde_json = "1.0"
http = "0.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = {version = "0.7.15", features = ["full"]}
tokio-stream = "0.1.17"
futures = "0.3.31"
httparse = "1.0"
httpdate = "1.0"